kubernetes/azure-nominatim-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: nominatim
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: nominatim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nominatim-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nominatim
  template:
    metadata:
      labels:
        app: nominatim
        track: canary
    spec:
      containers:
      - name: nominatim-k8s
        image: peterevans/nominatim-k8s:latest
        volumeMounts:
        - name: azure
          mountPath: /mnt/azure
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /search
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 1
      volumes:
      - name: azure
        azureFile:
          secretName: azure-storage-secret
          shareName: azure
          readOnly: false
