kubernetes/nominatim-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: nominatim
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: nominatim
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nominatim-canary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nominatim
        track: canary
    spec:
      volumes:
      - name: nominatim-secret-volume
        secret:
          secretName: nominatim-storage-secret
      containers:
      - name: nominatim-k8s
        image: peterevans/nominatim-k8s:latest
        volumeMounts:
        - name: nominatim-secret-volume
          readOnly: true
          mountPath: /etc/nominatim-secret-volume
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /search
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 1
